code cleanup bug fixes

--- a/CardEditor.csproj
+++ b/CardEditor.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>bitbug_favicon %283%29.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System">
@@ -99,7 +99,7 @@
     <None Include="Resources\1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bitbug_favicon %283%29.ico" />
+    <Content Include="Resources\icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
