DataSource bind to a BindingList, flags bind to enum

--- a/CardEditor.csproj
+++ b/CardEditor.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Box.cs" />
+    <Compile Include="EnumHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
