--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net35" requireReinstallation="true" />
+  <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net472" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net35" requireReinstallation="true" />
   <package id="NPOI" version="2.5.5" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
